fixing scroll on firefox

--- a/src/App.scss
+++ b/src/App.scss
@@ -5,7 +5,7 @@
 .btn {
   border-radius: 1.875em;
   font-size: 1.375rem;
-  padding: 10px 40px;
+  padding: 10px 30px;
 
   color: #ffffff;
   background-color: $cherryRed;
