--- a/src/index.scss
+++ b/src/index.scss
@@ -1,13 +1,7 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-
 html,
 body,
 div,
 span,
-applet,
 object,
 iframe,
 h1,
@@ -19,11 +13,8 @@ h6,
 p,
 blockquote,
 pre,
-a,
 abbr,
-acronym,
 address,
-big,
 cite,
 code,
 del,
@@ -33,19 +24,14 @@ img,
 ins,
 kbd,
 q,
-s,
 samp,
 small,
-strike,
 strong,
 sub,
 sup,
-tt,
 var,
 b,
-u,
 i,
-center,
 dl,
 dt,
 dd,
@@ -68,16 +54,13 @@ article,
 aside,
 canvas,
 details,
-embed,
-figure,
 figcaption,
+figure,
 footer,
 header,
 hgroup,
 menu,
 nav,
-output,
-ruby,
 section,
 summary,
 time,
@@ -87,11 +70,16 @@ video {
   margin: 0;
   padding: 0;
   border: 0;
-  font-size: 16px;
-  font: inherit;
+  outline: 0;
+  font-size: 100%;
   vertical-align: baseline;
+  background: transparent;
 }
-/* HTML5 display-role reset for older browsers */
+
+body {
+  line-height: 1;
+}
+
 article,
 aside,
 details,
@@ -105,17 +93,16 @@ nav,
 section {
   display: block;
 }
-body {
-  line-height: 1;
-}
-ol,
-ul {
+
+nav ul {
   list-style: none;
 }
+
 blockquote,
 q {
   quotes: none;
 }
+
 blockquote:before,
 blockquote:after,
 q:before,
@@ -123,7 +110,56 @@ q:after {
   content: "";
   content: none;
 }
+
+a {
+  margin: 0;
+  padding: 0;
+  font-size: 100%;
+  vertical-align: baseline;
+  background: transparent;
+}
+
+/* change colors to suit your needs */
+ins {
+  background-color: #ff9;
+  color: #000;
+  text-decoration: none;
+}
+
+/* change colors to suit your needs */
+mark {
+  background-color: #ff9;
+  color: #000;
+  font-style: italic;
+  font-weight: bold;
+}
+
+del {
+  text-decoration: line-through;
+}
+
+abbr[title],
+dfn[title] {
+  border-bottom: 1px dotted;
+  cursor: help;
+}
+
 table {
   border-collapse: collapse;
   border-spacing: 0;
+}
+
+/* change border color to suit your needs */
+hr {
+  display: block;
+  height: 1px;
+  border: 0;
+  border-top: 1px solid #cccccc;
+  margin: 1em 0;
+  padding: 0;
+}
+
+input,
+select {
+  vertical-align: middle;
 }
